--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Montserrat', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.serifText {
+  font-family: 'Courier Prime', serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.spacer {
+  aspect-ratio: 960/540;
+  width: 100%;
+  background-repeat: no-repeat;
+  backgroun-position: center;
+  background-size: cover;
+}
+
+.imageEntrace > svg {
+  display: block;
+  animation: slide 5s;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX("-10em")
+  }
+  to {
+    transform: translateX(0em)
+  }
+}
+
+.glass {
+  background: linear-gradient(133.21deg, rgba(243, 243, 243, 0.6) 1.14%, rgba(243, 243, 243, 0.380135) 62.58%, rgba(243, 243, 243, 0.284482) 90.84%, rgba(243, 243, 243, 0.05) 100%);
+  backdrop-filter: blur(50px); /* Note: backdrop-filter has minimal browser support */
+  border-radius: 25px;
 }
